--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\WYSIWYG\\Summernote\\": "src/"
+      "EnjoysCMS\\WYSIWYG\\Summernote\\": "src/"
     }
   },
   "extra": {
