post install scripts

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     "use-migrations": false
   },
   "scripts": {
-    "post-install-cmd": "yarn install"
+    "post-update-cmd": "yarn install"
   }
 }
