adit composer.json scripts section

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     "use-migrations": false
   },
   "scripts": {
-    "post-install-cmd": "cd ./WYSIWYG/summernote && yarn install",
-    "post-update-cmd": "@post-install-cmd"
+    "post-install-cmd": "cd ./WYSIWYG/summernote && yarn install"
   }
 }
