--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,30 @@
 {
-  "name": "enjoyscms/summernote",
-  "description": "Wysiwyg Summernote for EnjoysCMS",
-  "type": "enjoyscms-wysiwyg",
-  "require": {
-    "php": ">=8.0",
-    "enjoyscms/core": "^4.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "EnjoysCMS\\WYSIWYG\\Summernote\\": "src/"
+    "name": "enjoyscms/summernote",
+    "description": "Wysiwyg Summernote for EnjoysCMS",
+    "type": "enjoyscms-wysiwyg",
+    "require": {
+        "php": ">=8.0",
+        "enjoyscms/core": "^4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "EnjoysCMS\\WYSIWYG\\Summernote\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\EnjoysCMS\\WYSIWYG\\Summernote\\": "tests/"
+        }
+    },
+    "extra": {
+        "module-name": "Summernote WYSIWYG Editor",
+        "use-migrations": false
+    },
+    "scripts": {
+        "post-install-cmd": "EnjoysCMS\\WYSIWYG\\Summernote\\Composer::assetsInstall",
+        "post-update-cmd": "EnjoysCMS\\WYSIWYG\\Summernote\\Composer::assetsInstall"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
-  },
-  "extra": {
-    "module-name": "Summernote WYSIWYG Editor",
-    "use-migrations": false
-  },
-  "scripts": {
-    "post-install-cmd": "EnjoysCMS\\WYSIWYG\\Summernote\\Composer::assetsInstall",
-    "post-update-cmd": "EnjoysCMS\\WYSIWYG\\Summernote\\Composer::assetsInstall"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5"
-  }
 }
