--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "use-migrations": false
     },
     "scripts": {
-        "post-install-cmd": "EnjoysCMS\\WYSIWYG\\Summernote\\Composer::assetsInstall",
-        "post-update-cmd": "EnjoysCMS\\WYSIWYG\\Summernote\\Composer::assetsInstall"
+        "post-install-cmd": "EnjoysCMS\\ContentEditor\\Summernote\\Composer::assetsInstall",
+        "post-update-cmd": "EnjoysCMS\\ContentEditor\\Summernote\\Composer::assetsInstall"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
