--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
       "scripts": {
           "summernote-assets-install": "EnjoysCMS\\ContentEditor\\Summernote\\Composer\\Scripts\\AssetsInstallCommand",
           "post-install-cmd": [
-              "echo -e \"\\x1b[1mSummernote\\x1b[00m\"",
+              "@print-module-name Summernote",
               "@summernote-assets-install"
           ],
           "post-update-cmd": [
-              "echo -e \"\\x1b[1mSummernote\\x1b[00m\"",
+              "@print-module-name Summernote",
               "@summernote-assets-install"
           ]
     },
